@@ -1,3 +1,14 @@
+2005-04-04  Stepan Kasal  <kasal@ucw.cz>
+
+	* makeinfo/makeinfo.c (usage): Add indentation to the examples, so
+	  that help2man can recognize them; fix indentation of some other
+	  options.
+	* doc/Makefile.am (makeinfo.1): Add a sed command to postprocess
+	  the generated manpage.
+	* doc/makefile.1: Refresh.
+
+	Thanks to Jim Razmus for the bug report.
+
 2005-04-04  Torsten Bronger  <bronger@physik.rwth-aachen.de>  (tiny changes)
 
 	* doc/texinfo.txi: Fix several typos.
